feat: increment 6 - REST controller & error handling
FlightController (6 endpoints), RequestIdFilter (X-Request-ID/MDC),
GlobalExceptionHandler (RFC 9457 ProblemDetail, all 8 domain exceptions + catch-all),
@Validated page/size bounds, WebMvcTest suite (22 tests).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>